// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createScene(routes, { scene, basename }) actions.notFound(state): 13 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/not-found-foo",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/not-found-foo",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {
          "foo": "bar",
        },
        "type": "SCENE/NOT_FOUND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/not-found-foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "SCENE",
    "search": "",
    "status": 404,
    "url": "/base-name/not-found-foo",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {
    "foo": "bar",
  },
  "type": "SCENE/NOT_FOUND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.notFound(state): 13 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound(state): 13 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound(state): 13 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound(state): 13 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound(state): 13 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound(state): 13 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound(state): 13 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/not-found-foo",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/not-found-foo",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {
          "foo": "bar",
        },
        "type": "SCENE/NOT_FOUND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/not-found-foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {
      "foo": "bar",
    },
    "status": 404,
    "type": "SCENE/NOT_FOUND",
    "universal": false,
    "url": "/base-name/not-found-foo",
  },
  "title": "SCENE/NOT_FOUND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.notFound(state): 13 - title 1`] = `"SCENE/NOT_FOUND"`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 14 - response 1`] = `
Object {
  "basename": "/base-name",
  "payload": "foo",
  "type": "SCENE/NOT_FOUND_COMPLETE",
}
`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 14 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 14 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 14 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 14 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 14 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 14 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 14 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SCENE/NOT_FOUND_COMPLETE - \\"foo\\"",
}
`;

exports[`createScene(routes, { scene, basename }) actions.notFound.complete(payload): 14 - title 1`] = `"FIRST"`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SCENE/SECOND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "SCENE",
    "search": "",
    "status": 200,
    "url": "/base-name/second",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SCENE/SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SCENE/SECOND",
    "universal": false,
    "url": "/base-name/second",
  },
  "title": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(): 1 - title 1`] = `"SCENE/SECOND"`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - response 1`] = `
Object {
  "basename": "/base-name",
  "type": "WRONG",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "WRONG",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(action with wrong type): 5 - title 1`] = `"FIRST"`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second/bar",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/second/bar",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {},
        "state": Object {},
        "type": "SCENE/SECOND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/second/bar",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "SCENE",
    "search": "",
    "status": 200,
    "url": "/base-name/second/bar",
  },
  "params": Object {
    "foo": "bar",
  },
  "query": Object {},
  "state": Object {},
  "type": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second/bar",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/second/bar",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {},
        "state": Object {},
        "type": "SCENE/SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {
      "foo": "bar",
    },
    "pathname": "/second/bar",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SCENE/SECOND",
    "universal": false,
    "url": "/base-name/second/bar",
  },
  "title": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(params): 3 - title 1`] = `"SCENE/SECOND"`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second/bar",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/second/bar",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {},
        "state": Object {},
        "type": "SCENE/SECOND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/second/bar",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "SCENE",
    "search": "",
    "status": 200,
    "url": "/base-name/second/bar",
  },
  "params": Object {
    "foo": "bar",
  },
  "query": Object {},
  "state": Object {},
  "type": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second/bar",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/second/bar",
        },
        "params": Object {
          "foo": "bar",
        },
        "query": Object {},
        "state": Object {},
        "type": "SCENE/SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {
      "foo": "bar",
    },
    "pathname": "/second/bar",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SCENE/SECOND",
    "universal": false,
    "url": "/base-name/second/bar",
  },
  "title": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(partialAction): 2 - title 1`] = `"SCENE/SECOND"`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second/FIRST",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/second/FIRST",
        },
        "params": Object {
          "foo": "FIRST",
        },
        "query": Object {},
        "state": Object {},
        "type": "SCENE/SECOND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/second/FIRST",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "SCENE",
    "search": "",
    "status": 200,
    "url": "/base-name/second/FIRST",
  },
  "params": Object {
    "foo": "FIRST",
  },
  "query": Object {},
  "state": Object {},
  "type": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second/FIRST",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/second/FIRST",
        },
        "params": Object {
          "foo": "FIRST",
        },
        "query": Object {},
        "state": Object {},
        "type": "SCENE/SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {
      "foo": "FIRST",
    },
    "pathname": "/second/FIRST",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SCENE/SECOND",
    "universal": false,
    "url": "/base-name/second/FIRST",
  },
  "title": "SCENE/SECOND",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second(thunk): 4 - title 1`] = `"SCENE/SECOND"`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - response 1`] = `
Object {
  "basename": "/base-name",
  "payload": Object {
    "foo": "bar",
  },
  "type": "SCENE/SECOND_COMPLETE",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SCENE/SECOND_COMPLETE - {\\"foo\\":\\"bar\\"}",
}
`;

exports[`createScene(routes, { scene, basename }) actions.second.complete(thunk): 11 - title 1`] = `"FIRST"`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - response 1`] = `
Object {
  "basename": "/base-name",
  "payload": Object {
    "foo": "bar",
  },
  "type": "SCENE/THIRD_COMPLETE",
}
`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "ready": true,
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SCENE/THIRD_COMPLETE - {\\"foo\\":\\"bar\\"}",
}
`;

exports[`createScene(routes, { scene, basename }) actions.third.complete(payload): 10 - title 1`] = `"FIRST"`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - response 1`] = `
Object {
  "basename": "/base-name",
  "error": [Error: fail],
  "type": "SCENE/THIRD_ERROR",
}
`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "error": [Error: fail],
    "errorType": "SCENE/THIRD_ERROR",
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SCENE/THIRD_ERROR",
}
`;

exports[`createScene(routes, { scene, basename }) actions.third.error(new Error): 8 - title 1`] = `"FIRST"`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - response 1`] = `
Object {
  "basename": "/base-name",
  "payload": Object {
    "foo": "bar",
  },
  "type": "SCENE/PLAIN",
}
`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SCENE/PLAIN - {\\"foo\\":\\"bar\\"}",
}
`;

exports[`createScene(routes, { scene, basename }) route with just action creator: 12 - title 1`] = `"SCENE/PLAIN - {\\"foo\\":\\"bar\\"}"`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third/baz",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/third/baz",
        },
        "params": Object {
          "foo": "baz",
        },
        "query": Object {},
        "state": Object {},
        "type": "SCENE/THIRD",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/third/baz",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "SCENE",
    "search": "",
    "status": 200,
    "url": "/base-name/third/baz",
  },
  "params": Object {
    "foo": "baz",
  },
  "query": Object {},
  "state": Object {},
  "type": "SCENE/THIRD",
}
`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/third/baz",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/third/baz",
        },
        "params": Object {
          "foo": "baz",
        },
        "query": Object {},
        "state": Object {},
        "type": "SCENE/THIRD",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {
      "foo": "baz",
    },
    "pathname": "/third/baz",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SCENE/THIRD",
    "universal": false,
    "url": "/base-name/third/baz",
  },
  "title": "SCENE/THIRD",
}
`;

exports[`createScene(routes, { scene, basename }) route.action - custom action creator: 6 - title 1`] = `"SCENE/THIRD"`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - response 1`] = `
Object {
  "basename": "base-name",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/fourth/baz",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/fourth/baz",
        },
        "params": Object {
          "foo": "baz",
        },
        "query": Object {},
        "state": Object {},
        "type": "SCENE/FOURTH",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/fourth/baz",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "SCENE",
    "search": "",
    "status": 200,
    "url": "/base-name/fourth/baz",
  },
  "params": Object {
    "foo": "baz",
  },
  "query": Object {},
  "state": Object {},
  "type": "SCENE/FOURTH",
}
`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - state 1`] = `
Object {
  "location": Object {
    "basename": "base-name",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "base-name",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/fourth/baz",
          "scene": "SCENE",
          "search": "",
          "url": "/base-name/fourth/baz",
        },
        "params": Object {
          "foo": "baz",
        },
        "query": Object {},
        "state": Object {},
        "type": "SCENE/FOURTH",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {
      "foo": "baz",
    },
    "pathname": "/fourth/baz",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {},
    "scene": "SCENE",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SCENE/FOURTH",
    "universal": false,
    "url": "/base-name/fourth/baz",
  },
  "title": "SCENE/FOURTH",
}
`;

exports[`createScene(routes, { scene, basename }) route.action: [] - custom action creators (array) - actions.fourth.customCreator(): 7 - title 1`] = `"SCENE/FOURTH"`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - response 1`] = `
Object {
  "basename": "/base-name",
  "error": Object {
    "foo": "bar",
  },
  "type": "SCENE/SECOND_ERROR",
}
`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - routes - SCENE/FOURTH - customCreator 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - routes - SCENE/PLAIN - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - routes - SCENE/SECOND - error 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - routes - SCENE/THIRD - action 1`] = `0`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "error": Object {
      "foo": "bar",
    },
    "errorType": "SCENE/SECOND_ERROR",
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "SCENE/SECOND_ERROR",
}
`;

exports[`createScene(routes, { scene, basename }) route.error - custom error action creator: 9 - title 1`] = `"FIRST"`;
